--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 </head>
 <body>
    <h1>Online Parking Reservation</h1>
-   <DIV class="DIV">
+   <div class="DIV">
    <button class="BUTTON">USER</button>
    <button class="BUTTON">ADMIN</button>
-   <img src=""
-   </DIV> 
+   <img src="">
+   </div> 
 </body>
 </html>
