--- a/admin.html
+++ b/admin.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OPR RIET</title>
     <link href="style.css" rel="stylesheet" >
-
 </head>
 <body>
-   <h1>Online Parking Reservation</h1>
-   <div class="DIV">
-   <button class="BUTTON"> <a href="userlogin.html">user</a></button>
-   <button class="BUTTON"><a href="admin.html">admin</a></button>
-   <img src="">
-   </div> 
+    <form>
+        <label>Email address</label> <input type="email">
+        <label>Password</label><input type="text">
+       
+    </form>
+    <a href="adminhome.html"><button>login</button></a>  
+   
 </body>
 </html>
